# TEngine-Shader

./: CMakeLists.txt  README.md
include/: shader.h
include/cglm/: types.h
include/glad/: glad.h
include/glad2/: gl.h
src/: glad.c  shader.c
